added: git-bash in all the containers

--- a/Ruby/Dockerfile
+++ b/Ruby/Dockerfile
@@ -1,5 +1,7 @@
 FROM ruby:2.6.5-alpine3.10
 
 RUN apk --no-cache add curl build-base sqlite-dev mariadb-dev postgresql-dev nodejs tzdata
+RUN apk add --no-cache bash
+RUN apk add git
 
 CMD tail -f /dev/null
