--- a/Static/Dockerfile
+++ b/Static/Dockerfile
@@ -2,3 +2,5 @@ FROM nginx:1.17.4-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf \
 	&& apk --no-cache add curl
+RUN apk add --no-cache bash
+RUN apk add git
