--- a/Java/Dockerfile
+++ b/Java/Dockerfile
@@ -1,7 +1,6 @@
 FROM openjdk:14-jdk-alpine3.10
 
 RUN apk --no-cache add maven curl
-RUN apk add --no-cache bash
-RUN apk add git
+RUN apk add --no-cache git
 
 CMD tail -f /dev/null
