--- a/Ruby/Dockerfile
+++ b/Ruby/Dockerfile
@@ -1,7 +1,6 @@
 FROM ruby:2.6.5-alpine3.10
 
 RUN apk --no-cache add curl build-base sqlite-dev mariadb-dev postgresql-dev nodejs tzdata
-RUN apk add --no-cache bash
-RUN apk add git
+RUN apk add --no-cache git
 
 CMD tail -f /dev/null
