--- a/Rust/Dockerfile
+++ b/Rust/Dockerfile
@@ -1,7 +1,6 @@
 FROM rust:1.43.1-alpine3.11
 
 RUN apk --no-cache add curl
-RUN apk add --no-cache bash
-RUN apk add git
+RUN apk add --no-cache git
 
 CMD tail -f /dev/null
