added: bash in all containers

--- a/PHP/Dockerfile
+++ b/PHP/Dockerfile
@@ -5,6 +5,7 @@ ENV NJS_VERSION   0.3.5
 ENV PKG_RELEASE   1
 
 RUN apk add --no-cache git
+RUN apk add --no-cache bash
 RUN set -x \
 # create nginx user/group first, to be consistent throughout docker variants
     && addgroup -g 101 -S nginx \
