--- a/Ruby/Dockerfile
+++ b/Ruby/Dockerfile
@@ -2,5 +2,6 @@ FROM ruby:2.6.5-alpine3.10
 
 RUN apk --no-cache add curl build-base sqlite-dev mariadb-dev postgresql-dev nodejs tzdata
 RUN apk add --no-cache git
+RUN apk add --no-cache bash
 
 CMD tail -f /dev/null
