--- a/Rust/Dockerfile
+++ b/Rust/Dockerfile
@@ -2,5 +2,6 @@ FROM rust:1.43.1-alpine3.11
 
 RUN apk --no-cache add curl
 RUN apk add --no-cache git
+RUN apk add --no-cache bash
 
 CMD tail -f /dev/null
