--- a/Java/Dockerfile
+++ b/Java/Dockerfile
@@ -2,5 +2,6 @@ FROM openjdk:14-jdk-alpine3.10
 
 RUN apk --no-cache add maven curl
 RUN apk add --no-cache git
+RUN apk add --no-cache bash
 
 CMD tail -f /dev/null
