--- a/Nodejs/Dockerfile
+++ b/Nodejs/Dockerfile
@@ -2,5 +2,6 @@ FROM node:8.16.1-alpine
 
 RUN apk --no-cache add curl
 RUN apk add --no-cache git
+RUN apk add --no-cache bash
 
 CMD tail -f /dev/null
