--- a/Python3/Dockerfile
+++ b/Python3/Dockerfile
@@ -2,5 +2,6 @@ FROM python:3.7.4-alpine3.10
 
 RUN apk --no-cache add curl
 RUN apk add --no-cache git
+RUN apk add --no-cache bash
 
 CMD tail -f /dev/null
