Revert "Update Python3 dockerfile and add setuptools"

--- a/Python3/Dockerfile
+++ b/Python3/Dockerfile
@@ -1,22 +1,6 @@
-FROM python:3.14-rc-alpine3.20
+FROM python:3.7.4-alpine3.10
 
-# Install system dependencies for building Python packages and image processing libraries for Pillow
-RUN apk add --no-cache \
-    build-base \
-    jpeg-dev \
-    zlib-dev \
-    libjpeg-turbo-dev \
-    libwebp-dev \
-    tiff-dev \
-    freetype-dev \
-    lcms2-dev \
-    openjpeg-dev \
-    tiff-dev \
-    musl-dev \
-    curl \
-    git
+RUN apk --no-cache add curl
+RUN apk add --no-cache git
 
-# Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip setuptools wheel
-CMD ["tail", "-f", "/dev/null"]
-
+CMD tail -f /dev/null
