--- a/Rust/Dockerfile
+++ b/Rust/Dockerfile
@@ -1,6 +1,7 @@
-FROM rust:1.43.1-alpine3.11
+FROM rust:1.85.1-alpine3.21
 
-RUN apk --no-cache add curl
-RUN apk add --no-cache git
+RUN apk --no-cache add curl \
+    musl-dev \
+    git 
 
 CMD tail -f /dev/null
